[package]
name = "three_geo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "three_geo"
crate-type = ["cdylib"]

[dependencies]
postgis = "0.9.0"
postgres = "0.19.3"
rust-3d = "0.34.0"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
